# ts_examples

./: .pre-commit-config.yaml  README.md  pyproject.toml
chapter_1/: ts_components.ipynb
chapter_10/: metrics.ipynb
chapter_2/: classical_decomposition.ipynb
chapter_3/: standard_decomposition.ipynb
chapter_5/: transformations.ipynb
chapter_8/: shifts.ipynb
data/oil/: US_Stock_Data.csv  oil_consumption.xls
