[tool.poetry]
name = "ts-examples"
version = "0.1.0"
description = ""
authors = ["IgorEvsin <irevsin@edu.hse.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
colorednoise = "^2.2.0"
numpy = "^2.2.4"
pandas = "^2.2.3"
sktime = "^0.36.0"
scikit-learn = "^1.6.1"
ipykernel = "^6.29.5"
matplotlib = "^3.10.1"
yfinance = "^0.2.55"
statsmodels = "^0.14.4"
pmdarima = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
